<resources>
    <string name="app_name">ImplicitIntent_Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="label_capture_video">Capture a Video</string>
    <string name="label_record_video">Record Video</string>
    <string name="label_play_video">Play Video</string>
    <string name="label_next">Next Tutorials</string>
    <string name="label_capture_video_without_data">CaptureVideoWithoutData</string>
    <string name="label_set_timer">Set Timer</string>
    <string name="label_add_calendar">Add Calendar</string>
    <string name="label_select_contact">Select Phone Number</string>
</resources>
