<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tv_video_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_centerHorizontal="true"
            android:text="@string/label_capture_video"/>

        <Button
            android:id="@+id/btn_capture_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_record_video"
            android:layout_below="@+id/tv_video_capture"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:onClick="dispatchTakeVideoIntent"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btn_play_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_play_video"
            android:layout_below="@+id/btn_capture_video"/>

        <VideoView
            android:id="@+id/vv_videoView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/video_view_height"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium_2"
            android:layout_below="@+id/btn_capture_video"/>


        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vv_videoView"
            android:text="@string/label_next"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_regular_2x"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>